# niryo-one-digital-twin

./: README.md
digital-twin-service/digital-replica/: Dockerfile  Niryo-One-Replay.ttm  README.md  build.sh  niryo-one-scene-lossy.simscene.xml  niryo_one_mirror_model.lua  run_coppelia.sh  run_dev.sh  run_example.sh
digital-twin-service/niryo-one-drivers/: README.md
digital-twin-service/niryo-one-drivers/robot/: Dockerfile  README.md  package.xml  run_container.sh
digital-twin-service/niryo-one-drivers/robot/launch/: controllers.launch  controllers.launch_debug  drivers.launch
digital-twin-service/niryo-one-drivers/robot/niryo_one_saved_values/: robot_name_for_user.txt  sequence_autorun_status.txt
digital-twin-service/niryo-one-stack/: README.md
digital-twin-service/replay-feature/: Dockerfile  README.md  data-algorithm  get-robot-data.py  pub-robot-data.py  run_docker.sh  runner.sh  zenoh-replay.py  zenohd-setup.sh
digital-twin-service/ros-master/: Dockerfile  README.md  build.sh  run_example.sh
digital-twin-service/web-interface/: Dockerfile  README.md  build.sh  rosnode_list.txt  run_container.sh  run_dev.sh  run_example.sh
fog05/: disable.sh  robot.yaml  robot_start.sh  start.sh
fog05/debs/: fog05-hypervisor-native_0.3.0~alpha1_arm64.deb
scenarios/: README.md
scenarios/5g-dive/: digitaltwin_descriptor_latest.json
scenarios/centralized-robot-stack/: Dockerfile  README.md  build.sh  docker-compose.yml  run_container.sh
utils/: README.md  docker-compose.yml  docker_hub.sh  iw-dump.sh  resize-sdcard.sh  tc_network_config.sh
(+114 files in other folders)
