<?xml version="1.0">
<package format="2">
  <name>niryo-drivers</name>
  <version>0.1.0</version>
  <description>Niryo One drivers container</description>
  <maintainer email="cmagalha@pa.uc3m.es">Carlos Guimaraes</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <export></export>
</package>
